--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #f21a23; }
+  background: #64ab80; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #1f5db2; }
+  background: #eb07fc; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #c731ec; }
+  background: #bfb7ed; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #05337b; }
+  background: #91b0cc; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #b414a2; }
+  background: #62d075; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #46b89d; }
+  background: #83cf7a; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #cb2f3e; }
+  background: #2b5d70; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #b3d945; }
+  background: #0a7bb6; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #de3225; }
+  background: #bd3507; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #b34de3; }
+  background: #189765; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #32cd69; }
+  background: #1d8e66; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #72312f; }
+  background: #119079; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #1f9d67; }
+  background: #e0e1f9; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #30f985; }
+  background: #134b27; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #df9a97; }
+  background: #6fd909; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #1204ed; }
+  background: #9eef51; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #de5547; }
+  background: #43e113; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #bbc7cc; }
+  background: #d569e4; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #a922fd; }
+  background: #221f9b; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #6ff236; }
+  background: #81ab65; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #2e9f2a; }
+  background: #0ccd8e; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #ca080d; }
+  background: #0aafec; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #8e30a5; }
+  background: #b936d7; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #4c8759; }
+  background: #c7a522; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #3e1445; }
+  background: #bd357b; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #1bbec0; }
+  background: #170a05; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #af742c; }
+  background: #fb8cc2; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #8e3d46; }
+  background: #448ec8; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #fe284d; }
+  background: #2819c5; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #72fdee; }
+  background: #609037; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #131102; }
+  background: #8abcb8; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #33f9df; }
+  background: #ed9b2c; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #6ee276; }
+  background: #9dba8b; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #aef868; }
+  background: #e7a2ee; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #7548f3; }
+  background: #9f049a; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #27f27b; }
+  background: #08fa27; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #eed290; }
+  background: #3783fd; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #068465; }
+  background: #c62a06; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #e5687c; }
+  background: #8e1d3d; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #a416ec; }
+  background: #07eca4; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #453ecd; }
+  background: #2cf2d9; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #925227; }
+  background: #3ae919; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #9bdfcb; }
+  background: #f51c1a; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #8086e0; }
+  background: #4232c7; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #0afad2; }
+  background: #c6f724; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #f8cec5; }
+  background: #b63fd1; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #81e9f7; }
+  background: #bc27d8; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #970de3; }
+  background: #3377dc; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #57536a; }
+  background: #2be710; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #8ec0de; }
+  background: #3a850f; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #6e7506; }
+  background: #d9d29c; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #a16633; }
+  background: #f28c93; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #3671a2; }
+  background: #6a379e; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #8255ae; }
+  background: #38bd4c; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #a47990; }
+  background: #3fb0ad; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #1a4933; }
+  background: #6eb030; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #530820; }
+  background: #c24db1; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #cc5809; }
+  background: #57b08e; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #8f1057; }
+  background: #b7f0db; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #394725; }
+  background: #b06a5b; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #c5563f; }
+  background: #5d8d6b; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #cbb54c; }
+  background: #139c45; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #9562bd; }
+  background: #fe9ef3; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #98e88b; }
+  background: #8e9a2b; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #33fe30; }
+  background: #c0b1e8; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #539ff8; }
+  background: #5c2a17; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #666a5f; }
+  background: #f0828c; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #394b01; }
+  background: #b1e9ca; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #44e530; }
+  background: #3407d9; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #9a48c4; }
+  background: #e4168c; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #760eaa; }
+  background: #33a0ef; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #5837c5; }
+  background: #14712c; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #259aeb; }
+  background: #cbf52f; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #f938f2; }
+  background: #2a940b; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #02faf1; }
+  background: #e6520e; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #f02d24; }
+  background: #85163b; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #1d5608; }
+  background: #18e1b6; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #3413a1; }
+  background: #b35d3f; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #e57c8d; }
+  background: #bfd851; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #f54581; }
+  background: #592f0c; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #19ac80; }
+  background: #b22dec; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #59142f; }
+  background: #57e74f; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #6ac3cb; }
+  background: #9ede67; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #1c8fdd; }
+  background: #0165f2; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #4cfe68; }
+  background: #373208; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #034f22; }
+  background: #084c84; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #f55396; }
+  background: #c99a3b; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #a32c78; }
+  background: #c2fda9; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #8d6f8a; }
+  background: #c68687; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #91f4a6; }
+  background: #2143a0; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #f79787; }
+  background: #0aa3a6; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #d2f425; }
+  background: #8f94e3; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #a8e6b9; }
+  background: #d3eee0; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #949f8d; }
+  background: #17a351; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #f307bd; }
+  background: #2c15ed; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #22db68; }
+  background: #bd80f4; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #0836f7; }
+  background: #4f66a5; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #7899bf; }
+  background: #9cf3b7; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #712a7d; }
+  background: #99190b; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #6a8b15; }
+  background: #fd52dd; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -9427,7 +9427,7 @@ th {
   align-items: center; }
 
 .user-profile {
-  background: #adadad;
+  background: rgba(142, 142, 142, 0.34);
   border: 1px solid #9b9fab;
   color: black;
   width: 26px;
@@ -13361,7 +13361,7 @@ li.prev {
   line-height: 1em;
   width: 100%;
   -moz-appearance: none;
-  background: #fff url(../images/drop-arrow-green.png) no-repeat scroll 97% 13px;
+  background: #fff url(../images/down-arrow.svg) no-repeat scroll 97% 13px;
   box-sizing: border-box;
   cursor: pointer; }
 
