--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -213,7 +213,7 @@ li.prev {
     line-height: 1em;
     width: 100%;
     -moz-appearance: none;
-    background: #fff url(../images/drop-arrow-green.png) no-repeat scroll 97%
+    background: #fff url(../images/down-arrow.svg) no-repeat scroll 97%
       13px;
     box-sizing: border-box;
     cursor: pointer;
