--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -2313,7 +2313,7 @@ display: inline-block;
 }
 
 .user-profile {
- background: #adadad;
+ background: rgba(142, 142, 142, 0.34);
  border: 1px solid #9b9fab;
  color: black;
  width: 26px;
