--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #64ab80; }
+  background: #cb9538; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #eb07fc; }
+  background: #6dff19; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #bfb7ed; }
+  background: #ec79fa; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #91b0cc; }
+  background: #7a5f81; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #62d075; }
+  background: #19e30c; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #83cf7a; }
+  background: #c53603; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #2b5d70; }
+  background: #9ba7f4; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #0a7bb6; }
+  background: #a6d594; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #bd3507; }
+  background: #d328d3; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #189765; }
+  background: #95beea; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #1d8e66; }
+  background: #74f29b; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #119079; }
+  background: #cd3ced; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #e0e1f9; }
+  background: #566892; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #134b27; }
+  background: #d3048e; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #6fd909; }
+  background: #d96124; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #9eef51; }
+  background: #54df5b; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #43e113; }
+  background: #c39450; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #d569e4; }
+  background: #394641; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #221f9b; }
+  background: #08a239; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #81ab65; }
+  background: #2fa205; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #0ccd8e; }
+  background: #0a4fcf; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #0aafec; }
+  background: #427da3; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #b936d7; }
+  background: #d05912; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #c7a522; }
+  background: #6c9e1a; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #bd357b; }
+  background: #b30862; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #170a05; }
+  background: #c0a51e; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #fb8cc2; }
+  background: #783620; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #448ec8; }
+  background: #7432db; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #2819c5; }
+  background: #b52640; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #609037; }
+  background: #e01f53; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #8abcb8; }
+  background: #9963cf; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #ed9b2c; }
+  background: #74825a; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #9dba8b; }
+  background: #9ef884; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #e7a2ee; }
+  background: #2efaf3; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #9f049a; }
+  background: #235320; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #08fa27; }
+  background: #751be5; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #3783fd; }
+  background: #8b6ae6; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #c62a06; }
+  background: #ff187a; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #8e1d3d; }
+  background: #afe992; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #07eca4; }
+  background: #7c2dc0; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #2cf2d9; }
+  background: #cc1870; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #3ae919; }
+  background: #2d99e1; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #f51c1a; }
+  background: #7b74f2; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #4232c7; }
+  background: #f5c85a; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #c6f724; }
+  background: #612824; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #b63fd1; }
+  background: #a97d8d; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #bc27d8; }
+  background: #d617ee; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #3377dc; }
+  background: #b6144d; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #2be710; }
+  background: #ecbe14; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #3a850f; }
+  background: #fc8d4d; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #d9d29c; }
+  background: #276a93; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #f28c93; }
+  background: #f5fbe4; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #6a379e; }
+  background: #cc894d; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #38bd4c; }
+  background: #e8e7f4; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #3fb0ad; }
+  background: #e1759b; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #6eb030; }
+  background: #49cbec; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #c24db1; }
+  background: #a23e44; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #57b08e; }
+  background: #de13e5; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #b7f0db; }
+  background: #74f11c; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #b06a5b; }
+  background: #a6859a; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #5d8d6b; }
+  background: #ae0a86; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #139c45; }
+  background: #98416d; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #fe9ef3; }
+  background: #f60acf; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #8e9a2b; }
+  background: #06aa78; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #c0b1e8; }
+  background: #bdc0f1; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #5c2a17; }
+  background: #1b2b45; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #f0828c; }
+  background: #034845; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #b1e9ca; }
+  background: #aa548b; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #3407d9; }
+  background: #cca50e; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #e4168c; }
+  background: #afc55d; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #33a0ef; }
+  background: #5d72a6; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #14712c; }
+  background: #f79873; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #cbf52f; }
+  background: #fb32ac; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #2a940b; }
+  background: #b3ed4c; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #e6520e; }
+  background: #b56e93; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #85163b; }
+  background: #a0d7bc; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #18e1b6; }
+  background: #2dadb2; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #b35d3f; }
+  background: #ad6cd7; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #bfd851; }
+  background: #3eef9a; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #592f0c; }
+  background: #1ea2b6; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #b22dec; }
+  background: #0eb23b; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #57e74f; }
+  background: #d402ad; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #9ede67; }
+  background: #db33d9; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #0165f2; }
+  background: #2ff08b; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #373208; }
+  background: #c66eef; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #084c84; }
+  background: #5624c1; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #c99a3b; }
+  background: #2e030c; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #c2fda9; }
+  background: #0295b1; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #c68687; }
+  background: #338a53; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #2143a0; }
+  background: #44917d; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #0aa3a6; }
+  background: #04ef64; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #8f94e3; }
+  background: #ba7169; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #d3eee0; }
+  background: #d01fb3; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #17a351; }
+  background: #989a58; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #2c15ed; }
+  background: #63c9af; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #bd80f4; }
+  background: #680df3; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #4f66a5; }
+  background: #beb218; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #9cf3b7; }
+  background: #2096a8; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #99190b; }
+  background: #a68e86; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #fd52dd; }
+  background: #28bd1e; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10579,14 +10579,14 @@ table .bold-heading {
 
 ::-webkit-input-placeholder {
   /* Edge */
-  color: #6c757d; }
+  color: #6c757d !important; }
 
 :-ms-input-placeholder {
   /* Internet Explorer 10-11 */
-  color: #6c757d; }
+  color: #6c757d !important; }
 
 ::placeholder {
-  color: #6c757d; }
+  color: #6c757d !important; }
 
 .widget-slider .slider-bg {
   background: rgba(227, 227, 227, 0.25);
@@ -13746,6 +13746,15 @@ input:checked + .sliders:before {
   height: 10px;
   margin-left: 6px; }
 
+.c-gray-lite {
+  padding: 6px;
+  background: #C4C4C4;
+  border-radius: 100%;
+  display: block;
+  width: 10px;
+  height: 10px;
+  margin-left: 6px; }
+
 .orange-c {
   background: #ff8a5b !important; }
 
@@ -14439,6 +14448,9 @@ input:checked + .sliders-Not .not-blue-bg {
 /* Rounded sliders */
 .custom-select-arrow {
   background-position-x: 94% !important; }
+
+.custom-select-arrow-small {
+  background-position-x: 90% !important; }
 
 .sliders-Not.round {
   border-radius: 34px; }
