--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #cb9538; }
+  background: #e21486; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #6dff19; }
+  background: #a89666; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #ec79fa; }
+  background: #4bc6af; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #7a5f81; }
+  background: #61f659; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #19e30c; }
+  background: #d7297f; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #c53603; }
+  background: #26a562; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #9ba7f4; }
+  background: #d0c1af; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #a6d594; }
+  background: #f3c71f; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #d328d3; }
+  background: #54c512; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #95beea; }
+  background: #22c377; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #74f29b; }
+  background: #4da0f2; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #cd3ced; }
+  background: #e3be2c; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #566892; }
+  background: #deabcb; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #d3048e; }
+  background: #259624; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #d96124; }
+  background: #0675a2; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #54df5b; }
+  background: #3f414e; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #c39450; }
+  background: #ab0edb; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #394641; }
+  background: #f420dd; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #08a239; }
+  background: #1869b7; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #2fa205; }
+  background: #d06208; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #0a4fcf; }
+  background: #a01a36; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #427da3; }
+  background: #70992a; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #d05912; }
+  background: #70d724; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #6c9e1a; }
+  background: #0535e5; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #b30862; }
+  background: #6d58e7; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #c0a51e; }
+  background: #05dbc2; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #783620; }
+  background: #0dcf61; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #7432db; }
+  background: #76e5d3; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #b52640; }
+  background: #e036da; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #e01f53; }
+  background: #207758; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #9963cf; }
+  background: #dfcffb; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #74825a; }
+  background: #9d29e9; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #9ef884; }
+  background: #91cf1d; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #2efaf3; }
+  background: #8d5517; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #235320; }
+  background: #a74da6; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #751be5; }
+  background: #2cd071; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #8b6ae6; }
+  background: #628dfe; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #ff187a; }
+  background: #89c26f; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #afe992; }
+  background: #607f52; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #7c2dc0; }
+  background: #5b8b01; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #cc1870; }
+  background: #9aac7d; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #2d99e1; }
+  background: #eae813; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #7b74f2; }
+  background: #cd844a; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #f5c85a; }
+  background: #07b240; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #612824; }
+  background: #57b519; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #a97d8d; }
+  background: #662fa8; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #d617ee; }
+  background: #d35692; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #b6144d; }
+  background: #97b7ad; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #ecbe14; }
+  background: #3d76c6; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #fc8d4d; }
+  background: #034491; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #276a93; }
+  background: #20ee5b; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #f5fbe4; }
+  background: #b74705; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #cc894d; }
+  background: #3875a3; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #e8e7f4; }
+  background: #81c706; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #e1759b; }
+  background: #fcc89c; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #49cbec; }
+  background: #7c7580; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #a23e44; }
+  background: #817d5a; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #de13e5; }
+  background: #74b14c; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #74f11c; }
+  background: #0e59b4; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #a6859a; }
+  background: #768a41; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #ae0a86; }
+  background: #297e7f; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #98416d; }
+  background: #a0f8d5; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #f60acf; }
+  background: #451c13; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #06aa78; }
+  background: #9ee9e7; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #bdc0f1; }
+  background: #7881e5; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #1b2b45; }
+  background: #7683cf; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #034845; }
+  background: #718a18; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #aa548b; }
+  background: #e7ebf3; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #cca50e; }
+  background: #5d8582; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #afc55d; }
+  background: #aceb03; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #5d72a6; }
+  background: #9af6a9; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #f79873; }
+  background: #fac9d2; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #fb32ac; }
+  background: #587c9c; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #b3ed4c; }
+  background: #f96108; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #b56e93; }
+  background: #651d26; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #a0d7bc; }
+  background: #062651; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #2dadb2; }
+  background: #9c026c; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #ad6cd7; }
+  background: #c0cff4; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #3eef9a; }
+  background: #1a8fad; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #1ea2b6; }
+  background: #183c93; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #0eb23b; }
+  background: #2fcf78; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #d402ad; }
+  background: #557a69; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #db33d9; }
+  background: #38acb6; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #2ff08b; }
+  background: #34ccd9; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #c66eef; }
+  background: #efa7ea; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #5624c1; }
+  background: #9380b3; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #2e030c; }
+  background: #bd29a0; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #0295b1; }
+  background: #def5e1; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #338a53; }
+  background: #a6e9cd; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #44917d; }
+  background: #78bd3b; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #04ef64; }
+  background: #378a64; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #ba7169; }
+  background: #65c59c; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #d01fb3; }
+  background: #671024; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #989a58; }
+  background: #292743; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #63c9af; }
+  background: #72a330; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #680df3; }
+  background: #af5fc9; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #beb218; }
+  background: #5a392f; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #2096a8; }
+  background: #8243f7; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #a68e86; }
+  background: #b45890; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #28bd1e; }
+  background: #05ed80; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
